<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>naveen_package</name>
  <version>1.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nvnanil@umd.edu">nvnanil</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>ariac_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>moveit_py</depend>
  <depend>moveit_core</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
